--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,12 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <receiver android:name=".SplashActivity"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.example.retromeal.ACTION_LOAD_COMPLETE"/>
+            </intent-filter>
+        </receiver>
 
         <!-- MainActivity -->
         <activity android:name="com.example.retromeal.MainActivity"
